--- a/index.html
+++ b/index.html
@@ -520,6 +520,21 @@
         <span>Generating payloads...</span>
     </div>
 
+    <!-- Advanced Features Modal -->
+    <div class="modal" id="advancedModal" role="dialog" aria-labelledby="advancedModalTitle" aria-hidden="true">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="advancedModalTitle">Advanced Features</h3>
+                <button class="btn-icon" onclick="app.closeAdvancedModal()" type="button" aria-label="Close advanced modal">
+                    <i class="fas fa-times" aria-hidden="true"></i>
+                </button>
+            </div>
+            <div class="modal-body" id="advancedModalBody">
+                <!-- Content will be populated by JavaScript -->
+            </div>
+        </div>
+    </div>
+
     <!-- Screen reader only content -->
     <div class="sr-only">
         <h1>Payload Arsenal - Advanced Cybersecurity Research Platform</h1>
