--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </nav>
 
         <!-- Enhanced Main Content -->
-        <main class="main-content">
+        <main class="main-content" id="mainContent">
             <!-- Advanced Search with AI -->
             <div class="search-container">
                 <div class="search-box">
