--- a/index.html
+++ b/index.html
@@ -361,6 +361,21 @@
             </div>
         </div>
 
+        <!-- Details Modal -->
+        <div class="modal" id="detailsModal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 id="modalTitle">Payload Details</h3>
+                    <button class="btn-icon" onclick="app.closeModal()">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+                <div class="modal-body" id="modalBody">
+                    <!-- Dynamic content will be inserted here -->
+                </div>
+            </div>
+        </div>
+
         <!-- Loading Indicator -->
         <div class="loading-indicator" id="loadingIndicator">
             <div class="loading-content">
